--- a/usermanual.html
+++ b/usermanual.html
@@ -86,7 +86,7 @@
     <div class="row">
     	<div class="col-lg-12" style="text-align: center;">
         	<h2>Step 2. Getting ready to play</h2>
-          	<p>You're almost their now</p>
+          	<p>You're almost there now</p>
         </div><!-- /.col-lg-12 -->
     </div><!-- /.row -->	
     	
