--- a/downloads.html
+++ b/downloads.html
@@ -68,8 +68,8 @@
           	<p><a class="btn btn-default" href="/bear_traffic_controller/files/bear_traffic_controller_windows.exe" role="button">Download .exe</a></p>
         </div><!-- /.col-lg-6 -->
         <div class="col-lg-6" style="text-align: center;">
-          	<h4>Other Operating Systems</h4>
-          	<p>Download the .jar file to play Bear Traffic Controller on other operating systems (e.g. OS X and Linux)</p>
+          	<h4>Mac OS X</h4>
+          	<p>Download the .jar file to play Bear Traffic Controller on OS X</p>
           	<p><a class="btn btn-default" href="/bear_traffic_controller/files/bear_traffic_controller_osx.jar" role="button">Download .jar</a></p>
         </div><!-- /.col-lg-6 -->
 	</div><!-- /.row -->
